@startuml
!theme plain
skinparam backgroundColor #FEFEFE

Title ER-диаграмма базы данных pc_assembly

' Справочники
entity "component_categories" as CC {
    * category_id : INTEGER <<PK>>
    --
    * category_name : VARCHAR(50) <<UQ>>
    description : TEXT
}

entity "pc_categories" as PCC {
    * pc_category_id : INTEGER <<PK>>
    --
    * category_name : VARCHAR(50) <<UQ>>
    description : TEXT
}

' Основные сущности
entity "components" as COMP {
    * component_id : INTEGER <<PK>>
    --
    * category_id : INTEGER <<FK>>
    * component_name : VARCHAR(100)
    * brand : VARCHAR(50)
    * model : VARCHAR(100)
    specifications : TEXT
    * price : DECIMAL(10,2)
    * selling_price : DECIMAL(10,2)
    * quantity_in_stock : INTEGER
}

entity "catalog_builds" as CB {
    * build_id : INTEGER <<PK>>
    --
    * pc_category_id : INTEGER <<FK>>
    * build_name : VARCHAR(100)
    description : TEXT
    * base_price : DECIMAL(10,2)
    * markup_percent : DECIMAL(5,2)
}

entity "clients" as CL {
    * client_id : INTEGER <<PK>>
    --
    * first_name : VARCHAR(50)
    * last_name : VARCHAR(50)
    email : VARCHAR(100) <<UQ>>
    phone : VARCHAR(20)
    * registration_date : DATE
}

entity "users" as U {
    * user_id : INTEGER <<PK>>
    --
    * username : VARCHAR(50) <<UQ>>
    * password_hash : VARCHAR(255)
    * role : VARCHAR(20)
    * created_at : TIMESTAMP
}

' Связующие таблицы
entity "catalog_build_items" as CBI {
    * id : INTEGER <<PK>>
    --
    * build_id : INTEGER <<FK>>
    * component_id : INTEGER <<FK>>
    * quantity : INTEGER
}

' Транзакционные данные
entity "orders" as O {
    * order_id : INTEGER <<PK>>
    --
    * client_id : INTEGER <<FK>>
    build_id : INTEGER <<FK>>
    * order_type : VARCHAR(20)
    * status : VARCHAR(20)
    * total_price : DECIMAL(10,2)
    * order_date : TIMESTAMP
    completion_date : TIMESTAMP
}

entity "order_items" as OI {
    * id : INTEGER <<PK>>
    --
    * order_id : INTEGER <<FK>>
    * component_id : INTEGER <<FK>>
    * quantity : INTEGER
    * unit_price : DECIMAL(10,2)
}

entity "finances" as F {
    * record_id : INTEGER <<PK>>
    --
    order_id : INTEGER <<FK>>
    * record_type : VARCHAR(20)
    * amount : DECIMAL(10,2)
    description : TEXT
    * record_date : TIMESTAMP
}

' Relationships
CC ||--o{ COMP : "1:N"
PCC ||--o{ CB : "1:N"
CB ||--o{ CBI : "1:N"
COMP ||--o{ CBI : "1:N"
CL ||--o{ O : "1:N"
CB |o--o{ O : "0:N"
O ||--o{ OI : "1:N"
COMP ||--o{ OI : "1:N"
O |o--o{ F : "0:N"

@enduml
